# sidemail-sdk-python

./: .coverage  .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
src/sidemail/: __init__.py  client.py
